5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1793_1598.log
== TEST (2019-05-30 18:18:07) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo":))
i=o
i=i+1
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo":))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:08) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo":))
i=o
i=i+1
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo":))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:57) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=o
i=i+1
ct=0
if(v==80)
  ct=80-5
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:58) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=o
i=i+1
ct=0
if(v==80)
  ct=80-5
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:30:15) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=80-5
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:30:15) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=80-5
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:54) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:32:10) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=80
if(v==80)
  ct=(80-5)
print(v,2)

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:11) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:12) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:13) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:13) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:14) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:14) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:15) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:15) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": ))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": ))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:30) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": )))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:39:24) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- EXECUTION TIME:
0.231749
-- ERROR:
  File "/home/codebench/codes/1793/1598/main.py", line 2
    v=array(eval(input("digite o custo": )))
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:39:26) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- EXECUTION TIME:
0.200044
-- ERROR:
  File "/home/codebench/codes/1793/1598/main.py", line 2
    v=array(eval(input("digite o custo": )))
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:26) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": )))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:27) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": )))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:28) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": )))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:28) 
-- CODE:
from numpy import *
v=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    v=array(eval(input("digite o custo": )))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:39:40) 
-- CODE:
from numpy import *
vetor=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- EXECUTION TIME:
0.189122
-- ERROR:
  File "/home/codebench/codes/1793/1598/main.py", line 2
    vetor=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:41) 
-- CODE:
from numpy import *
vetor=array(eval(input("digite o custo": )))
i=0
i=i+1
ct=0
if(v==80)
  ct=(80-5)
print(v,[2])

-- ERROR:
File "XXXX", line 2
    vetor=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:04) 
-- CODE:
from numpy import *
itens=array(eval(input("digite o custo": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:39) 
-- CODE:
from numpy import *
itens=array(eval(input("digite o custo": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:41) 
-- CODE:
from numpy import *
itens=array(eval(input("digite o custo": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- EXECUTION TIME:
0.152312
-- ERROR:
  File "/home/codebench/codes/1793/1598/main.py", line 2
    itens=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:41) 
-- CODE:
from numpy import *
itens=array(eval(input("digite o custo": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- EXECUTION TIME:
0.200289
-- ERROR:
  File "/home/codebench/codes/1793/1598/main.py", line 2
    itens=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:42) 
-- CODE:
from numpy import *
itens=array(eval(input("digite o custo": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- EXECUTION TIME:
0.160123
-- ERROR:
  File "/home/codebench/codes/1793/1598/main.py", line 2
    itens=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:43) 
-- CODE:
from numpy import *
itens=array(eval(input("digite o custo": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:43) 
-- CODE:
from numpy import *
itens=array(eval(input("digite o custo": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("digite o custo": )))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:43:10) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:43:11) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:24) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:24) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:25) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:45:03) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:45:06) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- EXECUTION TIME:
0.166505
-- ERROR:
  File "/home/codebench/codes/1793/1598/main.py", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:45:13) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:47:06) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:47:06) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:47:07) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens": )))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    itens=array(eval(input("custo dos itens": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:54) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens: ")))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:49:38) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens: ")))
total=sum(itens,dtype=float)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:49:54) 
-- CODE:
from numpy import *
itens=array(eval(input("custo dos itens: ")))
total=sum(itens,dtype=float)
print(round(total,2))
-- EXECUTION TIME:
0.486423
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
